--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,15 +50,15 @@ workflows:
   version: 2
   test-deploy:
     jobs:
-      - test
-      # filters:
-      #   tags:
-      #     only: /^v.*/
-      - deploy
-        # requires:
-        #   - test
-        # filters:
-        #   tags:
-        #     only: /^v.*/
-        # branches:
-        #   ignore: /.*/
+      - test:
+          filters:
+            tags:
+              only: /^v.*/
+      - deploy:
+          requires:
+            - test
+          filters:
+            tags:
+              only: /^v.*/
+            # branches:
+            #   ignore: /.*/
